fix: log/images saved to output folder

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -49,7 +49,9 @@
         "  <summary><big>What's New?</big></summary>\n",
         "<font color=gray>v.1.3 (01/03/23)</font>\n",
         "  <ul>\n",
+        "    <li>Added an option to save outputs to drive.</li>\n",
         "    <li>Moved support button to separated and hidden section, because it looks ugly.</li>\n",
+        "    <li>Fixed some bugs where VAE can't be changed in webui.</li>\n",
         "    <li>Updated dependencies, webui, and extensions to the latest version.</li>\n",
         "    <li>Deleted <code>hitokomoru_v1_5</code>.</li>\n",
         "    <li>Added <a href=\"https://huggingface.co/waifu-diffusion/wd-1-5-beta2\">WD 1.5 Beta 2 - Aesthetic</a>. Releases note: <a href=\"https://cafeai.notion.site/WD-1-5-Beta-2-Release-Notes-2852db5a9cdd456ba52fc5730b91acfd\">here</a></li>\n",
@@ -61,7 +63,6 @@
         "  <br>\n",
         "<font color=gray>v.1.2.2 (23/02/23)</font>\n",
         "  <ul>\n",
-        "    <li>Added an option to save outputs to drive.</li>\n",
         "    <li>Added <b>Extra</b> section for optional cell, the first cell added to the section is <b>Download Generated Images V2</b>, to store your output to huggingface and download it.</li>\n",
         "    <li>Changed how the installation works. If the folder exists, then skip unpacking.</li>\n",
         "    <li>Added <code>Replicant V1.0</code> as default model.</li>\n",
@@ -249,23 +250,22 @@
         "  del cap\n",
         "\n",
         "if output_to_drive:\n",
-        "  output_dir = \"/content/drive/MyDrive/WebUI/outputs\"\n",
-        "  \n",
+        "  drive_dir = \"/content/drive/MyDrive/WebUI\"\n",
         "  if not os.path.exists('/content/drive/MyDrive'):\n",
         "    print('\u001b[1;32mMounting google drive...')\n",
         "    drive.mount('/content/drive')\n",
         "else:\n",
-        "  output_dir = outputs_dir\n",
+        "  drive_dir = repo_dir\n",
         "\n",
         "with open(os.path.join(repo_dir, \"config.json\"), \"r\") as f:\n",
         "  data = json.load(f)\n",
         "\n",
-        "data[\"outdir_txt2img_samples\"] = os.path.join(output_dir, \"txt2img-images\")\n",
-        "data[\"outdir_img2img_samples\"] = os.path.join(output_dir, \"img2img-images\")\n",
-        "data[\"outdir_extras_samples\"] = os.path.join(output_dir, \"extras-images\")\n",
-        "data[\"outdir_txt2img_grids\"] = os.path.join(output_dir, \"txt2img-grids\")\n",
-        "data[\"outdir_img2img_grids\"] = os.path.join(output_dir, \"img2img-grids\")\n",
-        "data[\"outdir_save\"] = os.path.join(output_dir, \"log/images\")\n",
+        "data[\"outdir_txt2img_samples\"] = os.path.join(drive_dir, \"outputs/txt2img-images\")\n",
+        "data[\"outdir_img2img_samples\"] = os.path.join(drive_dir, \"outputs/img2img-images\")\n",
+        "data[\"outdir_extras_samples\"] = os.path.join(drive_dir, \"outputs/extras-images\")\n",
+        "data[\"outdir_txt2img_grids\"] = os.path.join(drive_dir, \"outputs/txt2img-grids\")\n",
+        "data[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"outputs/img2img-grids\")\n",
+        "data[\"outdir_save\"] = os.path.join(drive_dir, \"log/images\")\n",
         "\n",
         "with open(os.path.join(repo_dir, \"config.json\"), \"w\") as f:\n",
         "  json.dump(data, f, indent=4)\n",
