feat: added new section for anapnoe's ui

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -110,23 +110,26 @@
         "from tqdm import tqdm\n",
         "%store -r \n",
         "\n",
-        "# directory\n",
+        "# root directory\n",
         "root_dir = \"/content\"\n",
-        "repo_dir = \"/content/stable-diffusion-webui\"\n",
-        "tmp_dir = f\"{root_dir}/tmp\"\n",
-        "patches_dir = f\"{root_dir}/patches\"\n",
-        "deps_dir = f\"{root_dir}/deps/\"\n",
-        "outputs_dir = f\"{repo_dir}/outputs\"\n",
-        "components_dir = f\"{repo_dir}/models/components\"\n",
-        "models_dir = f\"{repo_dir}/models/Stable-diffusion/\"\n",
-        "vaes_dir = f\"{repo_dir}/models/VAE/\"\n",
-        "esrgan_dir = f\"{repo_dir}/models/ESRGAN/\"\n",
-        "hypernetworks_dir = f\"{repo_dir}/models/hypernetworks/\"\n",
-        "embeddings_dir = f\"{repo_dir}/embeddings/\"\n",
-        "extensions_dir = f\"{repo_dir}/extensions/\"\n",
-        "lora_dir = f\"{repo_dir}/extensions/sd-webui-additional-networks/models/lora\"\n",
-        "control_dir = f\"{repo_dir}/extensions/sd-webui-controlnet/models\"\n",
-        "annotator_dir = f\"{extensions_dir}/sd-webui-controlnet/annotator/\"\n",
+        "repo_dir = os.path.join(root_dir, \"stable-diffusion-webui\")\n",
+        "tmp_dir = os.path.join(root_dir, \"tmp\")\n",
+        "patches_dir = os.path.join(root_dir, \"patches\")\n",
+        "deps_dir = os.path.join(root_dir, \"deps\")\n",
+        "# repository directory\n",
+        "outputs_dir = os.path.join(repo_dir, \"outputs\")\n",
+        "components_dir = os.path.join(repo_dir, \"models/components\")\n",
+        "models_dir = os.path.join(repo_dir, \"models/Stable-diffusion\")\n",
+        "vaes_dir = os.path.join(repo_dir, \"models/VAE\")\n",
+        "esrgan_dir = os.path.join(repo_dir, \"models/ESRGAN/\")\n",
+        "hypernetworks_dir = os.path.join(repo_dir, \"models/hypernetworks\")\n",
+        "embeddings_dir = os.path.join(repo_dir, \"embeddings\")\n",
+        "extensions_dir = os.path.join(repo_dir, \"extensions\")\n",
+        "# extensions directory\n",
+        "lora_dir = os.path.join(extensions_dir, \"sd-webui-additional-networks/models/lora\")\n",
+        "control_dir = os.path.join(extensions_dir, \"sd-webui-controlnet/models\")\n",
+        "annotator_dir = os.path.join(extensions_dir, \"sd-webui-controlnet/annotator\")\n",
+        "\n",
         "with capture.capture_output() as cap:\n",
         "  for dir in [\"root_dir\", \"repo_dir\", \"tmp_dir\", \"outputs_dir\", \"components_dir\", \"models_dir\", \"vaes_dir\", \"esrgan_dir\", \"hypernetworks_dir\", \"embeddings_dir\", \"extensions_dir\", \"lora_dir\", \"control_dir\", \"annotator_dir\"]:\n",
         "    %store {dir}\n",
@@ -138,8 +141,10 @@
         "# url or path\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
-        "#@markdown ### Experimental\n",
-        "try_new_ui_ux = True #@param {type:'boolean'}\n",
+        "#@markdown ### New UI/UX Config\n",
+        "enable_new_ui = True #@param {type:'boolean'}\n",
+        "# stable commit hash : 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
+        "stable_commit = \"3cd625854f9dc71235a432703ba82abfc5d1a3fc\" #@param {type:'string'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "output_to_drive = False #@param {type:'boolean'}\n",
@@ -220,7 +225,7 @@
         "  if not os.path.exists(repo_dir):\n",
         "    pre_download()\n",
         "\n",
-        "if try_new_ui_ux:\n",
+        "if enable_new_ui:\n",
         "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
         "  with capture.capture_output() as cap:\n",
         "    os.chdir(repo_dir)\n",
@@ -228,7 +233,8 @@
         "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
         "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
         "    !git pull\n",
-        "    !git reset --hard 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
+        "    if stable_commit:\n",
+        "      !git reset --hard {stable_commit}\n",
         "    del cap\n",
         "\n",
         "with capture.capture_output() as cap:\n",
@@ -238,7 +244,7 @@
         "\n",
         "  !wget https://raw.githubusercontent.com/ddPn08/automatic1111-colab/main/patches/stablediffusion-lowram.patch -P {patches_dir}  -c\n",
         "  if load_v2_in_vram:\n",
-        "    os.chdir(f\"{repo_dir}/repositories/stable-diffusion-stability-ai\")\n",
+        "    os.chdir(os.path.join(repo_dir, \"repositories/stable-diffusion-stability-ai\"))\n",
         "    !git apply {patches_dir}/stablediffusion-lowram.patch\n",
         "\n",
         "  if colab_optimizations:\n",
