fix: scipy module not found

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -144,7 +144,7 @@
         "#@markdown ### New UI/UX Config\n",
         "enable_new_ui = True #@param {type:'boolean'}\n",
         "# stable commit hash : 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
-        "stable_commit = \"3cd625854f9dc71235a432703ba82abfc5d1a3fc\" #@param {type:'string'}\n",
+        "stable_commit = \"\" #@param {type:'string'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "output_to_drive = False #@param {type:'boolean'}\n",
@@ -153,7 +153,7 @@
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
         "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
-        "pre_download_annotator = True #@param {type:'boolean'}\n",
+        "pre_download_annotator = False #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
         "update_extensions = True #@param {type:'boolean'}\n",
@@ -161,9 +161,9 @@
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "remove_dist = [\"/usr/local/lib/python3.8/dist-packages/scipy\",\n",
-        "               \"/usr/local/lib/python3.8/dist-packages/scipy-1.7.3.dist-info\",\n",
-        "               \"/usr/local/lib/python3.8/dist-packages/scipy.libs\"]\n",
+        "# remove_dist = [\"/usr/local/lib/python3.8/dist-packages/scipy\",\n",
+        "#                \"/usr/local/lib/python3.8/dist-packages/scipy-1.7.3.dist-info\",\n",
+        "#                \"/usr/local/lib/python3.8/dist-packages/scipy.libs\"]\n",
         "\n",
         "package_url = [\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
@@ -189,9 +189,9 @@
         "    del cap \n",
         "    \n",
         "def pre_download():\n",
-        "  for dist in remove_dist:\n",
-        "    if os.path.exists(dist):\n",
-        "      shutil.rmtree(dist)\n",
+        "  # for dist in remove_dist:\n",
+        "  #   if os.path.exists(dist):\n",
+        "  #     shutil.rmtree(dist)\n",
         "\n",
         "  for package in tqdm(package_url, desc='\u001b[1;32mUnpacking WebUI'):\n",
         "    with capture.capture_output() as cap:\n",
