--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -47,6 +47,14 @@
         "\n",
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
+        "<font color=gray>v.1.4 (09/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Update xformers pre-compiled wheels to <code>xFormers 0.0.17.dev466</code></li>\n",
+        "    <li>Update pre-installed dependencies for <code>Python 3.9.16</code></li>\n",
+        "    <li>Added new Stable Diffusion Web UI Extensions: <code>batclinks-webui</code> and <code>sd-webui-llul</code></li>\n",
+        "    <li>Update t2i adapter model, currently has 8 model</li>\n",
+        "  </ul>\n",
+        "  <br>\n",
         "<font color=gray>v.1.3 (01/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Added an option to save outputs to drive.</li>\n",
@@ -161,9 +169,9 @@
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "# remove_dist = [\"/usr/local/lib/python3.8/dist-packages/scipy\",\n",
-        "#                \"/usr/local/lib/python3.8/dist-packages/scipy-1.7.3.dist-info\",\n",
-        "#                \"/usr/local/lib/python3.8/dist-packages/scipy.libs\"]\n",
+        "# remove_dist = [\"/usr/local/lib/python3.9/dist-packages/scipy\",\n",
+        "#                \"/usr/local/lib/python3.9/dist-packages/scipy-1.7.3.dist-info\",\n",
+        "#                \"/usr/local/lib/python3.9/dist-packages/scipy.libs\"]\n",
         "\n",
         "package_url = [\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
@@ -198,20 +206,22 @@
         "      package_name = os.path.basename(package)\n",
         "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {root_dir} -o {package_name} {package}\n",
         "      if package_name == \"webui-deps.tar.lz4\":\n",
-        "        !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.8/dist-packages/\n",
+        "        !tar -xI lz4 -f {package_name} --overwrite-dir --directory=/usr/local/lib/python3.9/dist-packages/\n",
         "      else:\n",
         "        !tar -xI lz4 -f {package_name} --directory=/\n",
         "      os.remove(os.path.basename(package_name))\n",
         "      del cap\n",
         "      \n",
-        "  if os.path.exists(\"/usr/local/lib/python3.8/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
-        "    shutil.rmtree(\"/usr/local/lib/python3.8/dist-packages/ffmpy-0.3.0.dist-info\")\n",
+        "  if os.path.exists(\"/usr/local/lib/python3.9/dist-packages/ffmpy-0.3.0.dist-info\"):\n",
+        "    shutil.rmtree(\"/usr/local/lib/python3.9/dist-packages/ffmpy-0.3.0.dist-info\")\n",
         "\n",
         "  s = getoutput('nvidia-smi')\n",
-        "  if not 'T4' in s:\n",
-        "    !pip uninstall -y xformers\n",
-        "    if 'A100' in s:\n",
-        "      %pip -q install {A100}\n",
+        "  with capture.capture_output() as cap:\n",
+        "    if not 'T4' in s:\n",
+        "      !pip uninstall -y xformers\n",
+        "      !pip install -q --pre xformers\n",
+        "      !pip install -q --pre triton\n",
+        "    del cap\n",
         "\n",
         "start_install = int(time.time())\n",
         "print(\"\u001b[1;32mInstalling...\\n\", end= \"\")\n",
@@ -697,6 +707,7 @@
         "  {\"--disable-console-progressbars\" if silent_launch else \"\"} \\\n",
         "  {\"--ngrok \" + ngrok_token if ngrok_token else \"\"} \\\n",
         "  {\"--ngrok-region \" + ngrok_region if ngrok_token else \"\"} \\\n",
+        "  --gradio-queue \\\n",
         "  --opt-sub-quad-attention \\\n",
         "  --opt-channelslast \\\n",
         "  --theme dark \\\n",
