fix: deleted refslave-2 and pastelmix

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -17,7 +17,7 @@
         "![](https://visitor-badge.glitch.me/badge?page_id=linaqruf.cag-webui) [![GitHub](https://badgen.net/badge/icon/github?icon=github&label)](https://github.com/Linaqruf/sd-notebook-collection/blob/main/cagliostro-colab-ui.ipynb) \n",
         "\n",
         "# **Cagliostro Colab UI**\n",
-        "All-in-One, Customizable and Flexible Stable Diffusion Web UI for Google Colab. <br>\n",
+        "All-in-One, Customizable and Flexible AUTOMATIC1111's Stable Diffusion Web UI for Google Colab. <br>\n",
         "\n",
         "<details>\n",
         "  <summary><big>Support Us!</big></summary>\n",
@@ -51,7 +51,7 @@
         "  <ul>\n",
         "    <li>Update xformers pre-compiled wheels to <code>xFormers 0.0.17.dev466</code></li>\n",
         "    <li>Update pre-installed dependencies for <code>Python 3.9.16</code></li>\n",
-        "    <li>Added new Stable Diffusion Web UI Extensions: <code>batclinks-webui</code> and <code>sd-webui-llul</code></li>\n",
+        "    <li>Added new Stable Diffusion Web UI Extensions: <code>batchlinks-webui</code> and <code>sd-webui-llul</code></li>\n",
         "    <li>Update t2i adapter model, currently has 8 model</li>\n",
         "  </ul>\n",
         "  <br>\n",
@@ -149,10 +149,10 @@
         "# url or path\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
         "\n",
-        "#@markdown ### New UI/UX Config\n",
-        "enable_new_ui = True #@param {type:'boolean'}\n",
+        "#@markdown ### Anapnoe UI/UX Config\n",
+        "use_anapnoe_ui = True #@param {type:'boolean'}\n",
         "# stable commit hash : 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
-        "stable_commit = \"\" #@param {type:'string'}\n",
+        "ui_commit_hash = \"\" #@param {type:'string'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "output_to_drive = False #@param {type:'boolean'}\n",
@@ -161,7 +161,6 @@
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
         "merge_in_vram = True #@param {type:'boolean'}\n",
         "colab_optimizations = True #@param {type:'boolean'}\n",
-        "pre_download_annotator = False #@param {type:'boolean'}\n",
         "\n",
         "#@markdown ### Built-In Extensions Config\n",
         "update_extensions = True #@param {type:'boolean'}\n",
@@ -169,22 +168,9 @@
         "# model\n",
         "os.chdir(root_dir)\n",
         "\n",
-        "# remove_dist = [\"/usr/local/lib/python3.9/dist-packages/scipy\",\n",
-        "#                \"/usr/local/lib/python3.9/dist-packages/scipy-1.7.3.dist-info\",\n",
-        "#                \"/usr/local/lib/python3.9/dist-packages/scipy.libs\"]\n",
-        "\n",
         "package_url = [\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-deps.tar.lz4\",\n",
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-cache.tar.lz4\"]\n",
-        "\n",
-        "annotator_url= [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/table5_pidinet.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/upernet_global_small.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/res101.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/dpt_hybrid-midas-501f0c75.pt\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/mlsd_large_512_fp32.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/network-bsds500.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/hand_pose_model.pth\",\n",
-        "                \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-annotator/body_pose_model.pth\"]\n",
         "\n",
         "def ubuntu_deps(url, name, dst):\n",
         "  with capture.capture_output() as cap:\n",
@@ -197,10 +183,6 @@
         "    del cap \n",
         "    \n",
         "def pre_download():\n",
-        "  # for dist in remove_dist:\n",
-        "  #   if os.path.exists(dist):\n",
-        "  #     shutil.rmtree(dist)\n",
-        "\n",
         "  for package in tqdm(package_url, desc='\u001b[1;32mUnpacking WebUI'):\n",
         "    with capture.capture_output() as cap:\n",
         "      package_name = os.path.basename(package)\n",
@@ -235,7 +217,7 @@
         "  if not os.path.exists(repo_dir):\n",
         "    pre_download()\n",
         "\n",
-        "if enable_new_ui:\n",
+        "if use_anapnoe_ui:\n",
         "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
         "  with capture.capture_output() as cap:\n",
         "    os.chdir(repo_dir)\n",
@@ -243,8 +225,8 @@
         "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
         "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
         "    !git pull\n",
-        "    if stable_commit:\n",
-        "      !git reset --hard {stable_commit}\n",
+        "    if ui_commit_hash:\n",
+        "      !git reset --hard {ui_commit_hash}\n",
         "    del cap\n",
         "\n",
         "with capture.capture_output() as cap:\n",
@@ -285,39 +267,6 @@
         "\n",
         "with open(os.path.join(repo_dir, \"config.json\"), \"w\") as f:\n",
         "  json.dump(data, f, indent=4)\n",
-        "  \n",
-        "if pre_download_annotator:\n",
-        "  for download in tqdm(annotator_url, desc='\u001b[1;32mPreparing ControlNet Annotator'):\n",
-        "    basename = os.path.basename(download)\n",
-        "    with capture.capture_output() as cap:\n",
-        "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {tmp_dir} -o {basename} {download}\n",
-        "      del cap\n",
-        "      \n",
-        "  for path in [\"pidinet/table5_pidinet.pth\", \n",
-        "              \"uniformer/upernet_global_small.pth\", \n",
-        "              \"leres/res101.pth\", \n",
-        "              \"midas/dpt_hybrid-midas-501f0c75.pt\", \n",
-        "              \"mlsd/mlsd_large_512_fp32.pth\", \n",
-        "              \"hed/network-bsds500.pth\",  \n",
-        "              \"openpose/hand_pose_model.pth\",  \n",
-        "              \"openpose/body_pose_model.pth\"]:\n",
-        "\n",
-        "    annotator_name = os.path.basename(path)\n",
-        "    annotator_path = os.path.join(annotator_dir, path)\n",
-        "    annotator_src = os.path.join(tmp_dir, annotator_name)\n",
-        "    annotator_dst = os.path.dirname(annotator_path)\n",
-        "\n",
-        "    if os.path.exists(annotator_path):\n",
-        "      os.remove(annotator_path)\n",
-        "    if not path.endswith(\"upernet_global_small.pth\"):\n",
-        "      shutil.move(annotator_src, annotator_dst)\n",
-        "    else:\n",
-        "      segmentation_path = \"/root/.cache/torch/hub/checkpoints\"\n",
-        "      os.makedirs(segmentation_path, exist_ok=True)\n",
-        "      if os.path.exists(os.path.join(segmentation_path, annotator_name)):\n",
-        "        os.remove(os.path.join(segmentation_path, annotator_name))\n",
-        "      shutil.copy(annotator_src, os.path.join(segmentation_path, annotator_name))\n",
-        "      shutil.move(annotator_src, annotator_dst)\n",
         "\n",
         "install_time = timedelta(seconds=time.time()-start_install)\n",
         "print(\"\u001b[1;32mFinished unpacking. Took\",\"%02d:%02d:%02d \\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
@@ -339,7 +288,7 @@
         "        pbar.update(1)\n",
         "  print(\"\\n\")\n",
         "  for ext in extensions_updated:\n",
-        "    print(f\"\u001b[1;32m{ext} updated to new version\")\n",
+        "    print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
         "\n",
         "  update_time = timedelta(seconds=time.time()-update)\n",
         "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
@@ -366,10 +315,9 @@
         "\n",
         "os.chdir(root_dir)\n",
         "#@markdown ### Available SD v1.x Model\n",
-        "anything_v3_2 = False #@param {type: 'boolean'}\n",
+        "anything_v3_2 = True #@param {type: 'boolean'}\n",
         "anything_v3_3 = False #@param {type: 'boolean'}\n",
-        "ref_slave_v2 = True #@param {type: 'boolean'}\n",
-        "pastelmix = False #@param {type: 'boolean'}\n",
+        "holokuki_v2 = False #@param {type: 'boolean'}\n",
         "chillout_mix = False #@param {type: 'boolean'}\n",
         "stable_diffusion_v1_5 = False #@param {type: 'boolean'}\n",
         "#@markdown ### Available SD v2.x 768v Model\n",
@@ -383,7 +331,6 @@
         "#@markdown ### Available ControlNet Model\n",
         "#@markdown All ControlNet model below is based on SDv1 model, so it doesn't work if your model is based on `SDv2 Base` and `SDv2 768v`. <br>\n",
         "#@markdown `e.g.: Waifu DIffusion V1.4-V1.5, Illuminati Diffusion, and Replicant V1.0`\n",
-        "\n",
         "control_model = False #@param {type: 'boolean'}\n",
         "diff_control_model = True #@param {type: 'boolean'}\n",
         "t2i_adapter_model = False #@param {type: 'boolean'}\n",
@@ -393,8 +340,7 @@
         "\n",
         "modelList = [\"anything_v3_2\",\n",
         "             \"anything_v3_3\",\n",
-        "             \"ref_slave_v2\",\n",
-        "             \"pastelmix\",\n",
+        "             \"holokuki_v2\",\n",
         "             \"chillout_mix\",           \n",
         "             \"stable_diffusion_v1_5\",\n",
         "             \"replicant_v1\",                          \n",
@@ -402,8 +348,7 @@
         "             \"waifu_diffusion_v1_5_e2_aesthetic\"]\n",
         "modelUrl = [\"https://huggingface.co/cag/anything-v3-1/resolve/main/anything-v3-2.safetensors\",\n",
         "            \"https://huggingface.co/cag/anything-v3-3/resolve/main/anything-v3-3.safetensors\",\n",
-        "            \"https://huggingface.co/AgraFL/RefSlave-V2/resolve/main/RefSlave-V2-FP16-VAEbaked.safetensors\",\n",
-        "            \"https://huggingface.co/andite/pastel-mix/resolve/main/pastelmix-fp32.safetensors\", \n",
+        "            \"https://huggingface.co/Aotsuyu/Kukicha/resolve/main/HoloKukiv2-fp16.safetensors\",\n",
         "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/chillout_mix-pruned.safetensors\",\n",
         "            \"https://huggingface.co/Linaqruf/stolen/resolve/main/pruned-models/stable_diffusion_1_5-pruned.safetensors\",         \n",
         "            \"https://huggingface.co/gsdf/Replicant-V1.0/resolve/main/Replicant-V1.0_fp16.safetensors\",             \n",
@@ -436,10 +381,14 @@
         "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_scribble_fp16.safetensors\",\n",
         "                  \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/diff_control_sd15_seg_fp16.safetensors\"]\n",
         "\n",
-        "t2iAdapterUrl = [\"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_keypose-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_seg-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/Linaqruf/stolen/resolve/main/controlnet-extracted-model/t2iadapter_sketch-fp16.safetensors\",\n",
-        "                 \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\"]\n",
+        "t2iAdapterUrl = [\"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_canny-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_color-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_depth-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_keypose-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_openpose-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_seg-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_sketch-fp16.safetensors\",\n",
+        "                \"https://huggingface.co/webui/ControlNet-modules-safetensors/resolve/main/t2iadapter_style-fp16.safetensors\"]\n",
         "\n",
         "for i, model in enumerate(modelList):\n",
         "    if locals()[model]: # if checkbox is checked\n",
@@ -513,26 +462,7 @@
         "download_time = timedelta(seconds=time.time()-downloading)\n",
         "\n",
         "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d \\n\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step\\n', end=\"\")\n",
-        "\n",
-        "print(\"\\n\\033[92m\\033[1mDownloaded Models\\033[96m\")\n",
-        "for model in downloaded_model:\n",
-        "  print(f\"- {model}\") \n",
-        "print(\"\\n\\033[92m\\033[1mDownloaded VAEs\\033[96m\")\n",
-        "for vae in downloaded_vae:\n",
-        "  print(f\"- {vae}\")\n",
-        "if control_model:\n",
-        "  print(\"\\n\\033[92m\\033[1mDownloaded Control Model:\\033[96m\") \n",
-        "  for model in downloaded_control_model:\n",
-        "    print(f\"- {model}\")\n",
-        "if diff_control_model:\n",
-        "  print(\"\\n\\033[92m\\033[1mDownloaded Difference Control Model:\\033[96m\") \n",
-        "  for model in downloaded_diff_control_model:\n",
-        "    print(f\"- {model}\")\n",
-        "if t2i_adapter_model:\n",
-        "  print(\"\\n\\033[92m\\033[1mDownloaded Text2Image Adapter Model:\\033[96m\") \n",
-        "  for model in downloaded_t2i_adapter_model:\n",
-        "    print(f\"- {model}\")"
+        "print('\\n\u001b[1;32mAll is done! Go to the next step\\n', end=\"\")"
       ],
       "metadata": {
         "id": "qgvihy5BQ3II",
@@ -589,10 +519,6 @@
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {dst_dir} {url}\n",
         "      del cap\n",
         "      downloaded.append((basename, dst_dir))\n",
-        "  print(\"\\n\")\n",
-        "  print(\"\\033[92m\\033[1mDownloaded URLs\\033[96m\")\n",
-        "  for item in downloaded:\n",
-        "    print(f\"- {item[0]}\")\n",
         "      \n",
         "custom_download_list = []\n",
         "\n",
@@ -629,7 +555,7 @@
         "\n",
         "download_time = timedelta(seconds=time.time()-downloading)\n",
         "\n",
-        "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
+        "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d \\n\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
         "print('\\n\u001b[1;32mAll is done! Go to the next step.', end=\"\")"
       ],
       "metadata": {
