fix: added support to load model from mounted gdrive

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -506,9 +506,13 @@
         "        if is_extensions:\n",
         "            os.chdir(extensions_dir)\n",
         "            !git clone {url}\n",
+        "        elif url.startswith(\"/content/drive/MyDrive/\"):\n",
+        "            !ln \"{url}\" {dst_dir} \n",
         "        elif url.startswith(\"https://drive.google.com\"):\n",
-        "            os.chdir(models_dir)\n",
-        "            !gdown --fuzzy {url}\n",
+        "            if 'folders' in url:\n",
+        "              !gdown --folder \"{url}\" -O {dst_dir} --fuzzy -c\n",
+        "            else:\n",
+        "              !gdown \"{url}\" -O {dst_dir} --fuzzy -c\n",
         "        elif url.startswith(\"https://huggingface.co/\"):\n",
         "            if '/blob/' in url:\n",
         "                url = url.replace('/blob/', '/resolve/')\n",
