--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -47,12 +47,21 @@
         "\n",
         "<details>\n",
         "  <summary><big>What's New?</big></summary>\n",
+        "<font color=gray>v.1.4.1 (11/03/23)</font>\n",
+        "  <ul>\n",
+        "    <li>Trying to establish my own style, deleted all possible NoCrypt and TheLastBen's code legacy</li>\n",
+        "    <li>Temporary removed <code>pre_download_annotator</code></li>\n",
+        "    <li>Deleted <code>PastelMix</code> from available models because the model license sold to <a href=\"https://fantasy.ai/\">fantasy.ai</a></li>\n",
+        "    <li>Deleted <code>RefSlave-V2</code> from available models because the author removed his model from huggingface and civitai</li>\n",
+        "    <li>Added HoloKuki V2 as to available models</li>\n",
+        "    <li>Update t2i adapter model, currently has 8 model</li>\n",
+        "  </ul>\n",
+        "  <br>\n",
         "<font color=gray>v.1.4 (09/03/23)</font>\n",
         "  <ul>\n",
         "    <li>Update xformers pre-compiled wheels to <code>xFormers 0.0.17.dev466</code></li>\n",
         "    <li>Update pre-installed dependencies for <code>Python 3.9.16</code></li>\n",
         "    <li>Added new Stable Diffusion Web UI Extensions: <code>batchlinks-webui</code> and <code>sd-webui-llul</code></li>\n",
-        "    <li>Update t2i adapter model, currently has 8 model</li>\n",
         "  </ul>\n",
         "  <br>\n",
         "<font color=gray>v.1.3 (01/03/23)</font>\n",
@@ -205,7 +214,8 @@
         "      !pip install -q --pre triton\n",
         "    del cap\n",
         "\n",
-        "start_install = int(time.time())\n",
+        "start_time = time.time()\n",
+        "\n",
         "print(\"\u001b[1;32mInstalling...\\n\", end= \"\")\n",
         "ubuntu_deps(\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/deb-libs.zip\", \"deb-libs.zip\", deps_dir)\n",
         "if clean_install:\n",
@@ -268,11 +278,17 @@
         "with open(os.path.join(repo_dir, \"config.json\"), \"w\") as f:\n",
         "  json.dump(data, f, indent=4)\n",
         "\n",
-        "install_time = timedelta(seconds=time.time()-start_install)\n",
-        "print(\"\u001b[1;32mFinished unpacking. Took\",\"%02d:%02d:%02d \\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
+        "end_time = time.time()\n",
+        "elapsed_time = int(end_time - start_time)\n",
+        "\n",
+        "if elapsed_time < 60:\n",
+        "    print(f\"\u001b[1;32mFinished unpacking. Took {elapsed_time} sec\")\n",
+        "else:\n",
+        "    mins, secs = divmod(elapsed_time, 60)\n",
+        "    print(f\"\u001b[1;32mFinished unpacking. Took {mins} mins {secs} sec\")\n",
         "\n",
         "if update_extensions:\n",
-        "  update = int(time.time())\n",
+        "  start_time = time.time()\n",
         "  extensions_updated = []\n",
         "  with tqdm(total=len(os.listdir(extensions_dir)), desc=\"\u001b[1;32mUpdating extensions\",  mininterval=0) as pbar:\n",
         "    for dir in os.listdir(extensions_dir):\n",
@@ -290,10 +306,16 @@
         "  for ext in extensions_updated:\n",
         "    print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
         "\n",
-        "  update_time = timedelta(seconds=time.time()-update)\n",
-        "  print(\"\\n\u001b[1;32mAll extensions are up to date. Took\",\"%02d:%02d:%02d\" % (update_time.seconds / 3600, (update_time.seconds / 60) % 60, update_time.seconds % 60), end='', flush=True)\n",
+        "  end_time = time.time()\n",
+        "  elapsed_time = int(end_time - start_time)\n",
         "\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step.')"
+        "  if elapsed_time < 60:\n",
+        "    print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {elapsed_time} sec\")\n",
+        "  else:\n",
+        "    mins, secs = divmod(elapsed_time, 60)\n",
+        "    print(f\"\\n\u001b[1;32mAll extensions are up to date. Took {mins} mins {secs} sec\")\n",
+        "\n",
+        "print('\u001b[1;32mAll is done! Go to the next step.')"
       ],
       "metadata": {
         "id": "A6c7-qjDdb0X",
@@ -415,7 +437,7 @@
         "      !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {models_dir} {url}\n",
         "      \n",
         "print(f\"\u001b[1;32mDownloading...\")\n",
-        "downloading = int(time.time())\n",
+        "start_time = time.time()\n",
         "\n",
         "downloaded_model=[]\n",
         "downloaded_vae=[]\n",
@@ -459,10 +481,16 @@
         "      downloaded_t2i_adapter_model.append(basename)\n",
         "      del cap\n",
         "\n",
-        "download_time = timedelta(seconds=time.time()-downloading)\n",
+        "end_time = time.time()\n",
+        "elapsed_time = int(end_time - start_time)\n",
         "\n",
-        "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d \\n\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step\\n', end=\"\")"
+        "if elapsed_time < 60:\n",
+        "  print(f\"\\n\u001b[1;32mDownload completed. Took {elapsed_time} sec\")\n",
+        "else:\n",
+        "  mins, secs = divmod(elapsed_time, 60)\n",
+        "  print(f\"\\n\u001b[1;32mDownload completed. Took {mins} mins {secs} sec\")\n",
+        "\n",
+        "print('\u001b[1;32mAll is done! Go to the next step')"
       ],
       "metadata": {
         "id": "qgvihy5BQ3II",
@@ -539,7 +567,7 @@
         "}\n",
         "\n",
         "print(f\"\u001b[1;32mDownloading...\")\n",
-        "downloading = int(time.time())\n",
+        "start_time = time.time()\n",
         "\n",
         "for custom_url in [custom_model_url,\n",
         "                   custom_vae_url,\n",
@@ -557,10 +585,16 @@
         "             custom_download_list,\n",
         "             custom_url == custom_extensions_url)\n",
         "\n",
-        "download_time = timedelta(seconds=time.time()-downloading)\n",
+        "end_time = time.time()\n",
+        "elapsed_time = int(end_time - start_time)\n",
         "\n",
-        "print(\"\\n\u001b[1;32mDownload completed. Took\",\"%02d:%02d:%02d \\n\" % (download_time.seconds / 3600, (download_time.seconds / 60) % 60, download_time.seconds % 60), end='', flush=True)\n",
-        "print('\\n\u001b[1;32mAll is done! Go to the next step.', end=\"\")"
+        "if elapsed_time < 60:\n",
+        "  print(f\"\\n\u001b[1;32mDownload completed. Took {elapsed_time} sec\")\n",
+        "else:\n",
+        "  mins, secs = divmod(elapsed_time, 60)\n",
+        "  print(f\"\\n\u001b[1;32mDownload completed. Took {mins} mins {secs} sec\")\n",
+        "\n",
+        "print('\u001b[1;32mAll is done! Go to the next step')"
       ],
       "metadata": {
         "id": "euzt0QG35aEO",
@@ -643,6 +677,15 @@
         "  --theme dark \\\n",
         "  {additional_args}"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ElWjXr_QVjbM"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
