feat: add more alternative tunnels

--- a/cagliostro-colab-ui.ipynb
+++ b/cagliostro-colab-ui.ipynb
@@ -157,14 +157,16 @@
         "\n",
         "# url or path\n",
         "A100 = \"https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15+e163309.d20230103.ColabProA100-cp38-cp38-linux_x86_64.whl\"\n",
+        "config_file = os.path.join(repo_dir, \"config.json\")\n",
         "\n",
         "#@markdown ### Anapnoe UI/UX Config\n",
         "use_anapnoe_ui = True #@param {type:'boolean'}\n",
         "# stable commit hash : 3cd625854f9dc71235a432703ba82abfc5d1a3fc\n",
-        "ui_commit_hash = \"\" #@param {type:'string'}\n",
+        "ui_commit_hash = \"a3fdbb5c2794203625db2e1b9bcc241769df73c5\" #@param {type:'string'}\n",
         "\n",
         "#@markdown ### Repo Config\n",
         "output_to_drive = False #@param {type:'boolean'}\n",
+        "commit_hash = \"3c922d983bf60ba187b5422b3690e6b7fb07777e\" #@param {type:'string'}\n",
         "git_pull = False #@param {type:'boolean'}\n",
         "clean_install = False #@param {type:'boolean'}\n",
         "load_v2_in_vram = True #@param {type:'boolean'}\n",
@@ -182,14 +184,13 @@
         "               \"https://huggingface.co/Linaqruf/fast-repo/resolve/main/webui-cache.tar.lz4\"]\n",
         "\n",
         "def ubuntu_deps(url, name, dst):\n",
-        "  with capture.capture_output() as cap:\n",
-        "    !wget -q --show-progress {url}\n",
-        "    with zipfile.ZipFile(name, 'r') as deps:\n",
-        "      deps.extractall(dst)\n",
-        "    !dpkg -i {dst}/*\n",
-        "    os.remove(name)\n",
-        "    shutil.rmtree(dst)\n",
-        "    del cap \n",
+        "  os.makedirs(dst, exist_ok=True)\n",
+        "  !wget -q --show-progress {url}\n",
+        "  with zipfile.ZipFile(name, 'r') as deps:\n",
+        "    deps.extractall(dst)\n",
+        "  !dpkg -i {dst}/*\n",
+        "  os.remove(name)\n",
+        "  shutil.rmtree(dst)\n",
         "    \n",
         "def pre_download():\n",
         "  for package in tqdm(package_url, desc='\u001b[1;32mUnpacking WebUI'):\n",
@@ -214,10 +215,28 @@
         "      !pip install -q --pre triton\n",
         "    del cap\n",
         "\n",
+        "  !git config --global user.email \"you@example.com\"\n",
+        "  !git config --global user.name \"Your Name\"\n",
+        "\n",
+        "def read_config(filename):\n",
+        "  with open(filename, \"r\") as f:\n",
+        "    config = json.load(f)\n",
+        "  return config\n",
+        "\n",
+        "def write_config(filename, config):\n",
+        "  with open(filename, \"w\") as f:\n",
+        "    json.dump(config, f, indent=4)\n",
+        "\n",
         "start_time = time.time()\n",
         "\n",
         "print(\"\u001b[1;32mInstalling...\\n\", end= \"\")\n",
-        "ubuntu_deps(\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/deb-libs.zip\", \"deb-libs.zip\", deps_dir)\n",
+        "with capture.capture_output() as cap:\n",
+        "  !apt -y update -qq\n",
+        "  ubuntu_deps(\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/ram_patch.zip\", \"ram_patch.zip\", deps_dir)\n",
+        "  %env LD_PRELOAD=libtcmalloc.so\n",
+        "  ubuntu_deps(\"https://huggingface.co/Linaqruf/fast-repo/resolve/main/deb-libs.zip\", \"deb-libs.zip\", deps_dir)\n",
+        "  del cap\n",
+        "  \n",
         "if clean_install:\n",
         "  if os.path.exists(repo_dir):\n",
         "    print(\"\u001b[1;32mUninstall current Web UI...\")\n",
@@ -227,17 +246,36 @@
         "  if not os.path.exists(repo_dir):\n",
         "    pre_download()\n",
         "\n",
+        "if commit_hash:\n",
+        "  try:\n",
+        "    os.chdir(repo_dir)\n",
+        "    with capture.capture_output() as cap:\n",
+        "      !git reset --hard {commit_hash}\n",
+        "      del cap\n",
+        "    print(\"\u001b[1;32mCommit hash: \", commit_hash)\n",
+        "  except Exception as e:\n",
+        "    print(\"\u001b[1;32mAn error occurred while resetting the commit hash:\", e)\n",
+        "\n",
         "if use_anapnoe_ui:\n",
         "  print(\"\u001b[1;32mUsing new UI/UX from @Anapnoe...\")\n",
-        "  with capture.capture_output() as cap:\n",
-        "    os.chdir(repo_dir)\n",
-        "    if os.path.exists(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\")):\n",
-        "      os.remove(os.path.join(extensions_dir,\"sd-web-ui-quickcss/style.css\"))\n",
-        "    !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
-        "    !git pull\n",
-        "    if ui_commit_hash:\n",
-        "      !git reset --hard {ui_commit_hash}\n",
-        "    del cap\n",
+        "  try:\n",
+        "    with capture.capture_output() as cap:\n",
+        "      os.chdir(repo_dir)\n",
+        "      config = read_config(config_file)\n",
+        "      config[\"disabled_extensions\"].append(\"stable-diffusion-webui\")\n",
+        "      write_config(config_file, config)\n",
+        "      !git remote set-url origin https://github.com/anapnoe/stable-diffusion-webui/\n",
+        "      !git pull\n",
+        "      if ui_commit_hash:\n",
+        "        !git reset --hard {ui_commit_hash}\n",
+        "        print(\"\u001b[1;32mUI Commit hash: \", ui_commit_hash)                  \n",
+        "      del cap\n",
+        "  except Exception as e:\n",
+        "    print(\"\u001b[1;32mAn error occurred:\", e)\n",
+        "else:\n",
+        "  config = read_config(config_file)\n",
+        "  config[\"disabled_extensions\"].remove(\"stable-diffusion-webui\")\n",
+        "  write_config(config_file, config)  \n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  if git_pull:\n",
@@ -265,18 +303,14 @@
         "else:\n",
         "  drive_dir = repo_dir\n",
         "\n",
-        "with open(os.path.join(repo_dir, \"config.json\"), \"r\") as f:\n",
-        "  data = json.load(f)\n",
-        "\n",
-        "data[\"outdir_txt2img_samples\"] = os.path.join(drive_dir, \"outputs/txt2img-images\")\n",
-        "data[\"outdir_img2img_samples\"] = os.path.join(drive_dir, \"outputs/img2img-images\")\n",
-        "data[\"outdir_extras_samples\"] = os.path.join(drive_dir, \"outputs/extras-images\")\n",
-        "data[\"outdir_txt2img_grids\"] = os.path.join(drive_dir, \"outputs/txt2img-grids\")\n",
-        "data[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"outputs/img2img-grids\")\n",
-        "data[\"outdir_save\"] = os.path.join(drive_dir, \"log/images\")\n",
-        "\n",
-        "with open(os.path.join(repo_dir, \"config.json\"), \"w\") as f:\n",
-        "  json.dump(data, f, indent=4)\n",
+        "config = read_config(config_file)\n",
+        "config[\"outdir_txt2img_samples\"] = os.path.join(drive_dir, \"outputs/txt2img-images\")\n",
+        "config[\"outdir_img2img_samples\"] = os.path.join(drive_dir, \"outputs/img2img-images\")\n",
+        "config[\"outdir_extras_samples\"] = os.path.join(drive_dir, \"outputs/extras-images\")\n",
+        "config[\"outdir_txt2img_grids\"] = os.path.join(drive_dir, \"outputs/txt2img-grids\")\n",
+        "config[\"outdir_img2img_grids\"] = os.path.join(drive_dir, \"outputs/img2img-grids\")\n",
+        "config[\"outdir_save\"] = os.path.join(drive_dir, \"log/images\")\n",
+        "write_config(config_file, config)\n",
         "\n",
         "end_time = time.time()\n",
         "elapsed_time = int(end_time - start_time)\n",
@@ -295,9 +329,12 @@
         "      if os.path.isdir(os.path.join(extensions_dir, dir)):\n",
         "        os.chdir(os.path.join(extensions_dir, dir))\n",
         "        with capture.capture_output() as cap:\n",
-        "          !git fetch origin\n",
-        "          !git pull\n",
-        "          \n",
+        "          try:\n",
+        "            !git fetch origin\n",
+        "            !git pull\n",
+        "          except Exception as e:\n",
+        "            print(f\"\u001b[1;32mAn error occurred while updating {dir}: {e}\")\n",
+        "            \n",
         "        output = cap.stdout.strip()\n",
         "        if \"Already up to date.\" not in output:\n",
         "          extensions_updated.append(dir)\n",
@@ -305,6 +342,7 @@
         "  print(\"\\n\")\n",
         "  for ext in extensions_updated:\n",
         "    print(f\"\u001b[1;32m- {ext} updated to new version\")\n",
+        "\n",
         "\n",
         "  end_time = time.time()\n",
         "  elapsed_time = int(end_time - start_time)\n",
@@ -622,6 +660,7 @@
         "password= \"\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ### Alternative Tunnel\n",
+        "alt_tunnel = \"cloudflared\" #@param ['none', 'all','cloudflared', 'localhostrun', 'remotemoe', \"googleusercontent\"]\n",
         "#@markdown > Get <b>your</b> token for ngrok [here](https://dashboard.ngrok.com/get-started/your-authtoken) \n",
         "ngrok_token = \"\" #@param {type: 'string'}\n",
         "ngrok_region = \"ap\" #@param [\"us\", \"eu\", \"au\", \"ap\", \"sa\", \"jp\", \"in\"]\n",
@@ -660,6 +699,7 @@
         "  --enable-insecure-extension-access \\\n",
         "  --disable-safe-unpickle \\\n",
         "  --lora-dir {lora_dir} \\\n",
+        "  {\"--\" + alt_tunnel if not alt_tunnel == \"none\" and not ngrok_token else \"\"} \\\n",
         "  {\"--ckpt \" + model_path if auto_model and os.path.exists(model_path) else \"\"} \\\n",
         "  {\"--vae-path \" + vae_path if auto_vae and os.path.exists(vae_path) else \"\"} \\\n",
         "  {\"--medvram\" if medvram else \"\"} \\\n",
